tests/rpm-pkgs/at-3.2.2-2.fc35/output-exp@cbmc/scan-results.err
Error: COMPILER_WARNING (CWE-477):
at-3.2.2/atd.c: scope_hint: In function 'set_selinux_context'
at-3.2.2/atd.c:223:5: warning[-Wdeprecated-declarations]: 'security_context_t' is deprecated
#  223 |     security_context_t user_context = NULL;
#      |     ^~~~~~~~~~~~~~~~~~
#  221|   static int
#  222|   set_selinux_context(const char *name, const char *filename) {
#  223|->     security_context_t user_context = NULL;
#  224|       security_context_t file_context = NULL;
#  225|       int retval = 0;

Error: COMPILER_WARNING (CWE-477):
at-3.2.2/atd.c:224:5: warning[-Wdeprecated-declarations]: 'security_context_t' is deprecated
#  224 |     security_context_t file_context = NULL;
#      |     ^~~~~~~~~~~~~~~~~~
#  222|   set_selinux_context(const char *name, const char *filename) {
#  223|       security_context_t user_context = NULL;
#  224|->     security_context_t file_context = NULL;
#  225|       int retval = 0;
#  226|       char *seuser = NULL;

Error: COMPILER_WARNING (CWE-563):
at-3.2.2/atd.c: scope_hint: In function 'run_loop'
at-3.2.2/atd.c:665:10: warning[-Wunused-but-set-variable]: variable 'batch_queue' set but not used
#  665 |     char batch_queue = '\0';
#      |          ^~~~~~~~~~~
at-3.2.2/atd.c: scope_hint: At top level
cc1: note: unrecognized command-line option '-Wno-unknown-warning-option' may have been intended to silence earlier diagnostics
#  663|       unsigned long jobno;
#  664|       char queue;
#  665|->     char batch_queue = '\0';
#  666|       time_t run_time, next_job;
#  667|       char batch_name[] = "z2345678901234";

Error: COMPILER_WARNING (CWE-563):
at-3.2.2/daemon.c: scope_hint: In function 'daemon_setup'
at-3.2.2/daemon.c:124:12: warning[-Wunused-but-set-variable]: variable 'old_umask' set but not used
#  124 |     mode_t old_umask;
#      |            ^~~~~~~~~
#  122|       /* Set up standard daemon environment */
#  123|       pid_t pid;
#  124|->     mode_t old_umask;
#  125|       int fd, devnull;
#  126|       FILE *fp;

Error: COMPILER_WARNING (CWE-1164):
at-3.2.2/lex.yy.c:1507:17: warning[-Wunused-function]: 'yyunput' defined but not used
# 1507 | 
#      |                 ^      
cc1: note: unrecognized command-line option '-Wno-unknown-warning-option' may have been intended to silence earlier diagnostics
# 1505|   
# 1506|   #ifndef YY_NO_UNPUT
# 1507|-> 
# 1508|       static void yyunput (int c, char * yy_bp )
# 1509|   {

Error: COMPILER_WARNING (CWE-1164):
at-3.2.2/lex.yy.c:1550:16: warning[-Wunused-function]: 'input' defined but not used
# 1550 | #else
#      |                ^    
# 1548|   #ifdef __cplusplus
# 1549|       static int yyinput (void)
# 1550|-> #else
# 1551|       static int input  (void)
# 1552|   #endif

Error: COMPILER_WARNING (CWE-758):
at-3.2.2/parsetime.y:13: warning: "__isleap" redefined
#   13 | #define __isleap(y) \
#      | 
at-3.2.2/parsetime.y:2: included_from: Included from here.
/usr/include/time.h:239: note: this is the location of the previous definition
#  239 | #define __isleap(year)  \
#      | 
cc1: note: unrecognized command-line option '-Wno-unknown-warning-option' may have been intended to silence earlier diagnostics
#   11|   
#   12|   #ifndef HAVE_ISLEAP
#   13|-> #define __isleap(y) \
#   14|       ((y) % 4 == 0 && ((y) % 100 != 0 || (y) % 400 == 0))
#   15|   #endif

Error: COMPILER_WARNING (CWE-563):
at-3.2.2/at.c:79: included_from: Included from here.
at-3.2.2/privs.h:177:12: warning[-Wunused-variable]: 'pam_session_opened' defined but not used
#  177 | static int pam_session_opened = 0;      //global for open session
#      |            ^~~~~~~~~~~~~~~~~~
cc1: note: unrecognized command-line option '-Wno-unknown-warning-option' may have been intended to silence earlier diagnostics
#  175|          } while (0) \
#  176|   
#  177|-> static int pam_session_opened = 0;      //global for open session
#  178|   
#  179|   #define AT_START_PAM { \
